--- a/_posts/2015-5-3-블로그시작.md
+++ b/_posts/2015-5-3-블로그시작.md
@@ -14,3 +14,5 @@ I begin to start another new blog which means that I have other blogs! :P I am j
 
 ![_config.yml](http://goo.gl/F0avS7)
 -2015.02 제주 국빈 방문기-
+
+꾸준히 작성해서 미래의 자산으로 써보자!!!! ㅎㅎ
