--- a/_posts/2015-5-3-블로그시작.md
+++ b/_posts/2015-5-3-블로그시작.md
@@ -12,7 +12,7 @@ tags: blog jekyll
 
 I begin to start another new blog which means that I have other blogs! :P I am just interested in new trend these days where many people love to use static web generator such as Jekyll or Hexo. Of course, I chose to use one of them, and I like it so far.
 
-![_config.yml](http://goo.gl/F0avS7)
--2015.02 제주 국빈 방문기-
+![_config.yml](https://lh3.googleusercontent.com/-CymUP-qmOxA/VVITjOx_thI/AAAAAAAAqlo/iWGkDO6vnmY/s0/P1100230-ANIMATION.gif "P1100230-ANIMATION.gif")
+-2013.12 Singapore-
 
 꾸준히 작성해서 미래의 자산으로 써보자!!!! ㅎㅎ
