--- a/_posts/2015-05-12-pmp-study.md
+++ b/_posts/2015-05-12-pmp-study.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: PMP 스터디 2일차
+title: PMP 스터디
 tags: pmp prince2 project_management
 ---
 
@@ -100,13 +100,13 @@ Critical Task
 
 > **Tip.**  
 >현업에서 리스크를 조직적 관리하는 곳은 드물다
->보통 PM에게 위임하는 경향이 있다 
->일반적으로 리스크 양식을 사용하지 않는다 
+>보통 PM에게 위임하는 경향이 있다
+>일반적으로 리스크 양식을 사용하지 않는다
 
 영국에서는 MOR
 
-리스크를 없애는 것은 불가능 --> 대응해야 하다. 
-가변성/연관성 
+리스크를 없애는 것은 불가능 --> 대응해야 하다.
+가변성/연관성
 
 ###PMBOK 에서는 ...
 리스크 관리 계획이라고 표현
@@ -125,11 +125,11 @@ Critical Task
 
 예비비확보 / 위험확률
 
-EMV = 확률 * 비용영향 
+EMV = 확률 * 비용영향
 
 확률이 높다? 고질적인 원인
 
-대응책 : 
+대응책 :
 - contingency plan (결과로 기인) - 막판에 하는 것
 - mitigation plan (원인 파악)- 예방  --> 일단 돈이 들어간다
 
@@ -138,85 +138,85 @@ EMV = 확률 * 비용영향
 >
 >임원진의 성향 파악이 필요 - Utility Theory
 >: Averse - Neutral - Seeking
->효용값을 가지고 대응 
+>효용값을 가지고 대응
 
 
 진도 및 일정관리
 ----------
 
-계획 대비 실적 관리 
+계획 대비 실적 관리
 
 성과 관리
 ----------
 
-기성고 (기작성/기제출) - Earned Value (획득 가치) --> 현상을 보고 예측 까지 가능 
+기성고 (기작성/기제출) - Earned Value (획득 가치) --> 현상을 보고 예측 까지 가능
 
 
 총정리
 ----------
 
- - PMBOK 관점 [p.17]에서 Project Management 의 수단?
- 
+ - PMBOK 관점에서 Project Management 의 수단?
+
     (답) **지식+기량(Skill)+도구/기법 적용** (목적: 요구사항 충족)
-     
- - PMI 제시 팀빌딩 실무지침 바른 순서는? [p111-112]
- 
+
+ - PMI 제시 팀빌딩 실무지침 바른 순서는?
+
     (답) 팀빌딩 계획 - 팀원 확보 위한 협상 - 착수회의 개최 - 팀원에게 확인 받음 - 의사소통 체계 구축
-    
- - 이해관계자 정의에 안맞는 것은? [p73]
- 
-   (답) 프로젝트에 적극적으로 참여하거나  프로젝트의 완료 결과에 따라 긍정적이든 부정적이든 영향을 받는(주는) 개인이나 조직  
- 
- - 이해관계자 관리 바른 순서는? [p76]
- 
-     (답) *식별* -> 정보 수집 -> *위치 식별(적대/중립/우호)* -> 강/약점 판단 - *위치변화 전략* - 반응 예측 (+ 대안 개발) - *관리 전략 수행* - 결과 평가 및 전략 조정 
-     
- - 팀발달 바른 순서는? [p110]
-   (답)
-     형성기   | 혼돈기      |규범기      |성취기
-     ---------| ----------- | ---------- | -------------
-   Forming | Storming | Norming | Performing
- 
+
+ - 이해관계자 정의에 안맞는 것은?
+
+    (답) 프로젝트에 적극적으로 참여하거나  프로젝트의 완료 결과에 따라 긍정적이든 부정적이든 영향을 받는(주는) 개인이나 조직  
+
+ - 이해관계자 관리 바른 순서는?
+
+    (답) *식별* -> 정보 수집 -> *위치 식별(적대/중립/우호)* -> 강/약점 판단 - *위치변화 전략* - 반응 예측 (+ 대안 개발) - *관리 전략 수행* - 결과 평가 및 전략 조정
+
+ - 팀 발달 바른 순서는?
+    (답)
+       형성기   | 혼돈기     | 규범기   | 성취기
+     ---------| -------- | ------- | -------------
+      Forming | Storming | Norming | Performing
+
  - 중요변경실행 중 초기약속자원 배정 못한다는 것을 알았다. 바람직한 것은?  
-   (답) 품질 저하 / 기간 증가 등을 설명?
-   
- - 비배분 예산을 포함하는 것은?  [p159]
+    (답) 품질 저하 / 기간 증가 등을 설명?
+
+ - 비배분 예산을 포함하는 것은?  
     (답) WBS로 배분된 예산 외의 것 / 우발 계획 예비비(Contingency reserve)
-    
- - 네트워크도 제시, 프로젝트 기간은? [p141]
+
+ - 네트워크도 제시, 프로젝트 기간은?
     (답) Critical Path의 총 합
- 
- - Critical Path 중 한 Activity가 4주 일찍 끝났다. 프로젝트 기간은?[p141]
-    (답) 
- 
- - PM지원, 표준화 제공, Mentor 수행조직은? [p13]
+
+ - Critical Path 중 한 Activity가 4주 일찍 끝났다. 프로젝트 기간은?
+    (답)
+
+ - PM지원, 표준화 제공, Mentor 수행조직은?
     (답) **PMO**
-    
- - PMBOK 10개 지식 분야 중 목표관리에 해당하는 분야는?[p19]
+
+ - PMBOK 10개 지식 분야 중 목표관리에 해당하는 분야는?
     (답) Scope / Time / Cost / Quality 는 4대 Trade-off 요소
-    
- - 프로젝트 성공 위해 가장 중요한 것은? [p285]
+
+ - 프로젝트 성공 위해 가장 중요한 것은?
     (답) 산출문/명시적요구충족/**고객기대충족**
- 
- - 고객에게 전할(제공)시 가장 중요한 것은? [p280]
+
+ - 고객에게 전할(제공)시 가장 중요한 것은?
     (답) **경고/리스크/이슈**: 나의 지위를 걸고
-    
- - PM 전문가에게 요구하는 5가지는? [p292] 
+
+ - PM 전문가에게 요구하는 5가지는?
     (답) integrity / contribute / enhance / balance / interact
           완전(정직) - 베품(공헌) - (끊임없는)향상 <-- 자신내부의 덕목
           균형 / (냉철하고 협동적인)대응 <-- 외부에 대한 덕목
-    
- - 고객/경영층과 대응하기 위한 역량 중 가장 필요한 것은? [p277,288]
+
+ - 고객/경영층과 대응하기 위한 역량 중 가장 필요한 것은?
     (답) **문제해결**: 윗사람과 Competing
- 
- - EVM(Earned Value Management) 획득가치 기법 중 ETC(현재 이후 예상 지출) 계산 [p242][p243]
-	   (답)  BAC-EV
 
- - Project Baseline (기준선)을 승인 또는 거절할 수 있는 **권한** 가진 조직은? [p229]
-   (답) **CCB** - Change Control Board
+ - EVM(Earned Value Management) 획득가치 기법 중 ETC(현재 이후 예상 지출) 계산
+	  (답)  BAC-EV
 
- - *리스크 대응 계획 수립*되었다. 바로 다음에 PM(프로젝트 관리자)가 수행할 일은? [p229]
-   (답) **WBS** 변경 
+ - Project Baseline (기준선)을 승인 또는 거절할 수 있는 **권한** 가진 조직은?
+    (답) **CCB** - Change Control Board
 
- - PMBOK 지식 분야중 All  the Work,(누락없이) only the work(중복없이) 수단으로 하는 지식 분야는? [p123]
-  (답) **범위 관리** - MECE
+ - *리스크 대응 계획 수립*되었다. 바로 다음에 PM(프로젝트 관리자)가 수행할 일은?
+    (답) **WBS** 변경
+
+ - PMBOK 지식 분야중 All  the Work,(누락없이) only the work(중복없이) 수단으로 하는 지식 분야는?
+    (답) **범위 관리** - MECE
