--- a/_posts/2015-05-12-pmp-study.md
+++ b/_posts/2015-05-12-pmp-study.md
@@ -173,9 +173,9 @@ EMV = 확률 * 비용영향
 
  - 팀 발달 바른 순서는?
     (답)
-       형성기   | 혼돈기     | 규범기   | 성취기
-     ---------| -------- | ------- | -------------
-      Forming | Storming | Norming | Performing
+     | 형성기   | 혼돈기     | 규범기   | 성취기      |
+     ---------| -------- | ------- | ----------
+     |Forming | Storming | Norming | Performing|
 
  - 중요변경실행 중 초기약속자원 배정 못한다는 것을 알았다. 바람직한 것은?  
     (답) 품질 저하 / 기간 증가 등을 설명?
