--- a/_posts/2015-05-12-pmp-study.md
+++ b/_posts/2015-05-12-pmp-study.md
@@ -168,10 +168,17 @@ EMV = 확률 * 비용영향
     (답) *식별* -> 정보 수집 -> *위치 식별(적대/중립/우호)* -> 강/약점 판단 - *위치변화 전략* - 반응 예측 (+ 대안 개발) - *관리 전략 수행* - 결과 평가 및 전략 조정
 
  - 팀 발달 바른 순서는?  
-    (답)  
-    |형성기|혼돈기|규범기|성취기|
-    |------|------|-----|----|
-    |Forming|Storming|Norming|Performing|
+    (답)
+    <style>
+    table {
+      margin-left: 30px;
+    }
+    </style>
+
+|   형성기  | 혼돈기    | 규범기       |성취기     |
+  ------- | ------------ | ------- | ----
+| Forming | Storming | Norming |Performing |  
+<br />
 
  - 중요변경실행 중 초기약속자원 배정 못한다는 것을 알았다. 바람직한 것은?  
     (답) 품질 저하 / 기간 증가 등을 설명?
