--- a/_posts/2015-05-12-pmp-study.md
+++ b/_posts/2015-05-12-pmp-study.md
@@ -1,22 +1,32 @@
 ---
 layout: post
-title: PMP 스터디
+title: Project Management 실무
 tags: pmp prince2 project_management
 ---
+<br />
+**PM 개요**
+----
+![enter image description here](https://lh3.googleusercontent.com/-QugvCvFfasw/VVQ9CanEwPI/AAAAAAAA6_Y/eYZWMnf1BnQ/s0/management_factor.jpg "management factor")
 
-**이슈 4가지 영역:**
+![enter image description here](https://lh3.googleusercontent.com/-X5FrZsW3y-s/VVQ9dwfskeI/AAAAAAAA6_s/nwAAfH6yMHo/s0/process_project_pm.jpg "Project Management vs. Project vs. Process")
+
+<br />
+**이슈 4가지 영역**
+----
 
  1. 타당성
  2. 프로세스
  3. 조직인력
  4. 기술
 
-**PMBOK 10가지 영역 :**
+<br />
+**PMBOK 10가지 영역**
+----
 
- 1. 범위
- 2. 시간
- 3. 원가
- 4. 품질
+ 1. **범위**
+ 2. **시간**
+ 3. **원가**
+ 4. **품질**
  5. 인적자원
  6. 의사소통
  7. 리스크
@@ -24,7 +34,11 @@ tags: pmp prince2 project_management
  9. 이해관계자
  10. 통합
 
-**팀 빌딩시:**
+![enter image description here](https://lh3.googleusercontent.com/-TTBRrYhiurs/VVQ8msnS05I/AAAAAAAA6_E/JrqEW1_ASe8/s0/10_standard_on_PMPOK.jpg "PMPOK 10 대 지식분야")
+
+<br />
+**팀 빌딩**
+---
 
 팀원의 심리 변화에 대해 팀빌딩시 소개하는 것이 PM --> 나중에 좌절할 때가 있으니 동요하지마
 
@@ -39,8 +53,10 @@ tags: pmp prince2 project_management
  9. 효과적인 팀 갈등 관리
  10. 바랍직한 프로젝트 리더십 구현
 
-WBS 작성
--------------
+<br />
+**WBS 작성**
+-----
+
 현업에서는 Activity또는 일정표와 혼재하여 사용
 누락/중복이 없어야 한다.
 
@@ -54,7 +70,7 @@ WBS 작성
 그럼 Activity는?
 - Work Package를 잘 만들기 위한 행위(Action)
 
-####왜 누락이 되면 안되나?
+###왜 누락이 되면 안되나?
 **모두의 신뢰를 잃는다.**
 
 중간의 변화 / 리스크에 추가되는 작업이 생기나 한번 생기는 WBS는 변경하지 않음 --> 여기서 일정 지연 발생!!
@@ -62,13 +78,14 @@ WBS 작성
 MECE 방식을 따르자
 
 
-> **Note:**
-> IRR : Internal Rate of Return - NPV 가 제로가 될때, 이자율
-> WBS : Work Breakdown Structure
+> **Note:**  
+>
+> IRR : Internal Rate of Return - NPV 가 제로가 될때, 이자율  
+> WBS : Work Breakdown Structure  
 > MECE: Mutually Exclusive, Collectively Exhaustive
 
-
-일정 계획
+<br />
+**일정 계획**
 ----------
 Critical Path (주공정경로)
 
@@ -81,7 +98,8 @@ Critical Task
  - 주공정경로 상의 활동 (Activity)
  - 납기 준수를 위해 가장 집중적으로 통제하여야 하는 활동
 
-원가 산정
+<br />
+**원가 산정**
 ----------
 현실적이지 못한 일정
 가격 경쟁
@@ -95,10 +113,12 @@ Critical Task
  - 외주비 : 턴키
  - 재료비 : S/W
 
-리스크 관리
+<br />
+**리스크 관리**
 ----------
 
 > **Tip.**  
+>
 >현업에서 리스크를 조직적 관리하는 곳은 드물다
 >보통 PM에게 위임하는 경향이 있다
 >일반적으로 리스크 양식을 사용하지 않는다
@@ -106,9 +126,9 @@ Critical Task
 영국에서는 MOR
 
 리스크를 없애는 것은 불가능 --> 대응해야 하다.
-가변성/연관성
+가변성/연관성  
 
-###PMBOK 에서는 ...
+###PMBOK 에서는..
 리스크 관리 계획이라고 표현
 
 절차서의 주 내용 - 일에 대한 설명 / 그일을 누가 할꺼냐? -->3번째 : 예외처리 규정(우리나라에는 없다. contingency plan)
@@ -133,26 +153,29 @@ EMV = 확률 * 비용영향
 - contingency plan (결과로 기인) - 막판에 하는 것
 - mitigation plan (원인 파악)- 예방  --> 일단 돈이 들어간다
 
-
 >**실전 팁:**
 >
 >임원진의 성향 파악이 필요 - Utility Theory
 >: Averse - Neutral - Seeking
 >효용값을 가지고 대응
 
-
-진도 및 일정관리
+<br />
+**진도 및 일정관리**
 ----------
 
 계획 대비 실적 관리
 
-성과 관리
+<br />
+**성과 관리**
 ----------
 
 기성고 (기작성/기제출) - Earned Value (획득 가치) --> 현상을 보고 예측 까지 가능
 
+### Traditional vs. Agile
+![enter image description here](https://lh3.googleusercontent.com/-n7-_m4D7UvM/VVQ95MaltNI/AAAAAAAA7AA/oTwRKcdbgr0/s0/traditional-vs-agile-PM.jpg "traditional vs. agile")
 
-총정리
+<br />
+**총정리**
 ----------
 
  - PMBOK 관점에서 Project Management 의 수단?  
