--- a/_posts/2015-05-12-pmp-study.md
+++ b/_posts/2015-05-12-pmp-study.md
@@ -4,7 +4,7 @@ title: Project Management 실무
 tags: pmp prince2 project_management
 ---
 
-직속 보스의 부재를 틈타서 들은 3일 짜리 교육이었는데, 얼른 필 받아서 PMP 라이센스를 받아야 할 것 같다. 너무 쉬었음~~
+직속 보스의 부재를 틈타서 들은 3일 짜리 교육이었는데, 얼른 필 받아서 PMP 라이센스를 받아야 할 것 같다. 너무 아쉬었음~~
 
 **PM 개요**
 ----
