--- a/_posts/2017-1-17-stock.2017.1.md
+++ b/_posts/2017-1-17-stock.2017.1.md
@@ -1,7 +1,7 @@
 --- 
 layout: post  
 title: 2017년 1월 주식 이야기      
-tags: stock strategy      
+tags: stock      
 excerpt: 괜찮은 투자 전략을 발견해서 바로 정리~                         
 ---  
 
