--- a/_posts/2015-05-03-블로그시작.md
+++ b/_posts/2015-05-03-블로그시작.md
@@ -1,7 +1,9 @@
 ---
 layout: post
 title: 또 다른 블로그를 시작!
-tags: blog jekyll
+tags: life  
+class: post-template
+subclass: 'post tag-life' 
 ---
 
 왜 이걸 다시 하게 되었는지 나도 잘 모름!! ㅎㅎㅎ
