--- a/_posts/2016-08-05-stock.08.05.md
+++ b/_posts/2016-08-05-stock.08.05.md
@@ -1,8 +1,11 @@
 --- 
 layout: post  
 title: 16년 8월 주식 이야기      
-tags: stock       
-excerpt: 8월은 전통적인 비수기이나, 브렉시트 덕택(?)에 전세계 돈 폭탄이 떨어지는 중!                         
+tags: life  
+class: post-template
+subclass: 'post tag-life'        
+excerpt: 8월은 전통적인 비수기이나, 브렉시트 덕택(?)에 전세계 돈 폭탄이 떨어지는 중!    
+author: tigim                     
 ---  
   
 ## 8월 18일  
