--- a/_posts/2016-10-02-faas.md
+++ b/_posts/2016-10-02-faas.md
@@ -1,8 +1,11 @@
 --- 
 layout: post  
 title: Function as a Service 조사  
-tags: faas lambda serverless_architecture      
-excerpt: FaaS를 활용한 간단한 프로젝트를 시작하기 위해 조사한 내용 정리        
+tags: technology
+class: post-template
+subclass: 'post tag-technology'      
+excerpt: FaaS를 활용한 간단한 프로젝트를 시작하기 위해 조사한 내용 정리       
+author: tigim 
 ---  
 
 ## FaaS(Serverless)란?  
