--- a/_posts/2017-01-17-stock.2017.1.md
+++ b/_posts/2017-01-17-stock.2017.1.md
@@ -1,8 +1,11 @@
 --- 
 layout: post  
 title: 2017년 1월 주식 이야기      
-tags: stock      
-excerpt: 괜찮은 투자 전략을 발견해서 바로 정리~                         
+tags: life   
+class: post-template
+subclass: 'post tag-life'   
+excerpt: 괜찮은 투자 전략을 발견해서 바로 정리~     
+author: tigim                    
 ---  
 
 ### [투자 전략]  
