--- a/_posts/2017-11-02-ros+drone.md
+++ b/_posts/2017-11-02-ros+drone.md
@@ -1,8 +1,11 @@
 --- 
 layout: post  
 title: ROS & Drone 관련 사이트      
-tags: ros drone rpi pwm raspberrypi      
-excerpt: 예전에 찾아둔 사이트와 최근 인터뷰 보면서 알게된 것 정리                       
+tags: technology   
+class: post-template
+subclass: 'post tag-technology'   
+excerpt: 예전에 찾아둔 사이트와 최근 인터뷰 보면서 알게된 것 정리  
+author: tigim                     
 ---  
   
 ## ROS and Deep learing   
